# prompt_engineering

./: .gitignore  CMakeLists.txt  LICENSE  README.md  c_coding_style.md  fsm_demo.ino
examples/: mt_sv_example.c
examples/esp32_idf_platformio_minimal/: README.md  platformio.ini
examples/esp32_idf_platformio_minimal/src/: main.c
examples/esp32s3_idf_minimal/: CMakeLists.txt  sdkconfig.defaults
examples/esp32s3_idf_minimal/main/: CMakeLists.txt  main.c
include/: mt_err.h  mt_result.h  mt_string_view.h
kicad_integration/: README.md  dummy.kicad_pcb  kicad_explorer.py  kicad_ipc_explorer.py  requirements.txt
src/: mt_string_view.c  opus_lan_chat.c
